instead of the text size.

Get rid of dl.summarize and gapply.fun for simplicity?

how to automatically adjust axes to make direct labels immediately
legible? For multipanel plots you would have to adjust all the scales!

method for .zoo plots?

handling custom # of bins/custom densityplot params?

problems with plotting color labels in lattice when col= is specified,
see etc/individual.R

see etc/xYplot.R for a problem with plotting some weird trellis
objects.

contourplot labels as in lattice::panel.contourplot or C source code
in r-source/src/main/plot3d.c

From Doug Peterson: Side point: Something else I noticed when playing
with this - if any kind of bin adjustment is used within the
stat_contour (e.g., stat_contour(aes(colour=..level..), binwidth=50)
directlabels ignores the binned contour lines and labels everything
(=whatever default contour lines are produced, even if not plotted!).

2.6 --- 5 June 2012

In ggplot2 >= 0.9.1, layer$data is an empty list of class "waiver" in
the ggplot object, but geom_xxx(data=waiver) results in an error, so
we check for this now and use data=NULL when we find a waiver.

2.5 --- 6 April 2012

draw.rects with configurable color, default black.

bugfix for ggplot2 geom_line picker. before we were not actually
checking the number of levels of the groups.

bugfixes for scatterplots using perpendicular.grid and [ac]hull.grid.

new check.for.columns function to make sure the data.frames returned
by Positioning Functions in apply.method have the necessary info.

bugfix for apply.method restore invariant columns for each group after
applying Positioning Method algorithm.

2.4 --- 5 March 2012

Suggest nlme to avoid warning on pkg check.

require(proto) in geom_dl to avoid error if it is called without
direct.label.ggplot

2.3 --- 2 March 2012

In apply.method, we look at all groups and determine which columns are
invariant in each, then after the Positioning Function is applied, we